[package]
name = "command-pool"
version = "0.0.1"
edition = "2021"
description = "A powerful and intuitive command-line tool to execute a series of commands in parallel."
license = "MIT"
repository = "https://github.com/worktools/command-pool"
homepage = "https://github.com/worktools/command-pool"
documentation = "https://docs.rs/command-pool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.12"
tokio = { version = "1.38.0", features = ["full"] }
humantime = "2.1.0"
